# AutomateTheBoringStuff

./: README.md  chess_dictionary_validator.py  pyproject.toml
automatetheboringstuff/: chess_dictionary_validator.py  coin_toss.py  link_verification.py  mclip.py  sandwich_maker.py  selective_copy.py  strong_password_detector.py  table_printer.py
automatetheboringstuff/mclip2/: mclip2.py
