[tool.poetry]
name = "automatetheboringstuff"
version = "0.1.0"
description = ""
authors = ["mduruji <mczduruji@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyperclip = "^1.9.0"
pyinputplus = "^0.2.12"
send2trash = "^1.8.3"
selenium = "^4.27.1"
requests = "^2.32.3"
bs4 = "^0.0.2"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
